--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+h1 ~ h6 {
+  font-family: 'Imprima', sans-serif;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Catamaran', sans-serif;
 }
