--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,5 @@
-h1 ~ h6 {
-  font-family: 'Imprima', sans-serif;
-}
-
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Catamaran', sans-serif;
+  font-family: sans-serif;
 }
